# NM-AI-2026

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  setup.sh
received_tasks/378efdba/: bankutskrift_de_08.csv  prompt.txt
task1-Tripletex/: .dockerignore  .env.example  AGENT_PROMPT.md  CLAUDE.md  Dockerfile  README.md  STATUS.md  agent.py  api.py  apply_fixes.py  context.py  deploy.sh  download_tasks.sh  eval_local.py  file_handler.py  llm.py  logs_stream.sh  package-lock.json  package.json  pyproject.toml  styrk_codes.json  system_prompt.py  test_agent.py  test_comprehensive.py  test_pdf_flow.py  test_sandbox.py  test_sandbox_full.py  tripletex_client.py  validator.py
task1-Tripletex/agent/: __init__.py  __main__.py  client.py  config.py  context.py  file_handler.py  knowledgebase.md  logging_config.py  orchestrator.py  pipeline.py  plan.md  research.md  toolcaller.py  validator.py
task1-Tripletex/core/: openapi_tools.py
task1-Tripletex/docs/: CHANGELOG.md  api-map.md  endpoint-spec.md  endpoint_Spec.md  examples.md  ns4102_chart_of_accounts.md  (+13 more)
task2-AstarIsland/: APPROACH.md  README.md  api.py  auto_round.py  backtest.py  best_params_all.json  fetch_history.py  optuna_all_models.py  optuna_kfold.py  quickstart.py  run_round.py  setup_scheduler.bat  store.py  submit_round.py  train_unet.py
task3-NorgesGruppen/: analyze_shelf_colors.py  api.py  augment_originals.py  clear_shelves.py  dinov3_coco_detection_notebook.ipynb  dinov3_coco_detection_notebook.py  eval.py  generate_synthetic.py  inference.py  run.py  run_slurm.slurm  test_placement.py
(+333 files in other folders)
