[project]
name = "nm-ai-2026"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests",
    "numpy",
    "python-dotenv>=1.2.2",
    "optuna>=4.8.0",
    "iterative-stratification>=0.1.7",
    "ultralytics>=8.1.0",
    "torch>=2.0.0",
]
